<resources>
    <string name="app_name">AgendaSQLite</string>
    <string name="nombre">Nombre</string>
    <string name="Telefono">Teléfono</string>
    <string name="Correo">Correo</string>
    <string name="guardar">Guardar</string>
    <string name="modificar">Modificar</string>
    <string name="buscar">Buscar</string>
    <string name="eliminar">Eliminar</string>
    <string name="title_activity_main_d">MainDActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="id">Id</string>
</resources>
